ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 8000
            path: /todos
          - pathType: Prefix
            backend:
              service:
                name: java-service
                port:
                  number: 8080
            path: /java-app
